[gd_scene load_steps=2 format=2]

[ext_resource path="res://PortalPair.gd" type="Script" id=1]

[node name="PortalPair" type="Spatial"]
script = ExtResource( 1 )

[node name="PortalA_VP" type="Viewport" parent="."]

[node name="Camera" type="Camera" parent="PortalA_VP"]

[node name="PortalB_VP" type="Viewport" parent="."]

[node name="Camera" type="Camera" parent="PortalB_VP"]

[node name="PortalA_Sprite" type="Sprite" parent="."]
offset = Vector2( 512, 300 )
region_enabled = true
region_rect = Rect2( 0, 0, 10, 60 )

[node name="PortalB_Sprite" type="Sprite" parent="."]
offset = Vector2( 512, 300 )
region_enabled = true
region_rect = Rect2( 0, 0, 10, 60 )
